Version 0.11

2005-05-23 Heinrich Wendel <h_wendel@cojobo.net>
	* DesktopEntry.p, Menu.py: A lot of bugfixes, thx to Travis Watkins
	<alleykat@gmail.com>

2005-05-02 Heinrich Wendel <h_wendel@cojobo.net>
	* Config.py:
	Module to configure Basic Settings, currently available:
	- Locale, IconTheme, IconSize, WindowManager
	* Locale.py:
	Internal Module to support Locales
	* Mime.py:
	Implementation of the Mime Specification
	* Menu.py:
	Now supports LegacyDirs
	* RecentFiles.py:
	Implementation of the Recent Files Specification

Version 0.10

2005-04-26 Heinrich Wendel <h_wendel@cojobo.net>
	* Menu.py:
	various bug fixing to support version 1.0.draft-1

2005-04-13 Heinrich Wendel <h_wendel@cojobo.net>
	* IniFily.py:
	Detect if a .desktop file was edited
	* Menu.py
	Fix bug caused by excluding NoDisplay/Hidden Items to early

Version 0.9

2005-03-23 Heinrich Wendel <h_wendel@cojobo.net>
	* IniFile.py:
	various speedups
	* Menu.py:
	add support for <MergeFile type="parent">, menu-spec-0.91

2005-03-21 Heinrich Wendel <h_wendel@cojobo.net>
	* IniFily.py:
	Small fixes
	* Menu.py:
	remove __preparse and don't edit the parsed document, so menu editing is
	possible
	store parsed document in Menu.Doc
	store document name in Menu.Filename

2005-03-18 Heinrich Wendel <h_wendel@cojobo.net>
	* Menu.py:
	fix basename argument, thx to Matt Kynaston <mattkyn@gmail.com>;
	make it comply to menu-spec-0.9

2004-30-11 Heinrich Wendel <h_wendel@cojobo.net>
	* Update BaseDirectory.py to the current ROX version

Version 0.8

2004-10-18  Ross Burton  <ross@burtonini.com>
	* xdg/DesktopEntry.py, xdg/IconTheme.py:
	Add . to the literal FileExtensions so that the checks work.
	* xdg/Menu.py:
	Don't read .desktop-* files, only .desktop

2004-10-18  Martin Grimme  <martin@pycage.de>
	* xdg/IconTheme.py (getIconPath): The "hicolor" theme has to be used as
	the fallback.
	* xdg/IniFile.py (IniFile.getList): Fixed bug in splitting up strings.

Version 0.7
