@@ -4,6 +4,3 @@ TODO:
 Never Finished:
 	- Performance improvements
 	- DOCS
-
-New Modules:
-	- MenuEditing
