@@ -1,3 +1,12 @@
+2005-05-28 Heinrich Wendel <h_wendel@cojobo.net>
+	* MenuEditor.py: New in this release, use to edit Menus thx to Travis
+	Watkins <alleykat@gmail.com> and Matt Kynaston <mattkyn@gmail.com> for
+	their help
+	* Menu.py, IniFile.py, DesktopEntry.py: Lot of bugfixing...
+	* BaseDirectory.py: Add xdg_cache_home
+	* IconTheme.py, Config.py: More caching stuff, make cachetime
+	configurable
+
 Version 0.11
 
 2005-05-23 Heinrich Wendel <h_wendel@cojobo.net>
